Lecture 3/src/objects/School__c.object
<CustomObject>
    <fields>
        <fullName>About_US__c</fullName>
        <label>About US</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Classes_Roll_up__c</fullName>
        <label>Number of Classes (Roll up)</label>
        <summaryForeignKey>Class__c.School__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Classes__c</fullName>
        <label>Number of Classes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <label>Number of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Email__c</fullName>
        <label>School Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_of_Est__c</fullName>
        <label>Year of Est.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Years_of_Existence__c</fullName>
        <formula>YEAR( TODAY() ) - YEAR( Year_of_Est__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years in Existence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>School</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Validate_Date_of_Establishment</fullName>
        <active>true</active>
        <description>Validateion rule to make sure that an user can&apos;t out a future year value in the Date of Establishment field for the school object</description>
        <errorConditionFormula>IF(
    OR(
        YEAR(Year_of_Est__c) &gt; YEAR(TODAY()),
        AND(
            YEAR(Year_of_Est__c) = YEAR(TODAY()),
            MONTH(Year_of_Est__c) &gt; MONTH(TODAY())
        ),
        AND(
            YEAR(Year_of_Est__c) = YEAR(TODAY()),
            MONTH(Year_of_Est__c) = MONTH(TODAY()),
            DAY(Year_of_Est__c) &gt; DAY(TODAY())
        )
    ),
    true,
    false
)</errorConditionFormula>
        <errorMessage>Please Enter a valid value for Date of Establishment</errorMessage>
    </validationRules>
</CustomObject>